Implement delete product from cart with modal and max quantity limit
Added functionality to delete a product from the cart using a modal for confirmation. Users can now remove unwanted items from their cart more conveniently. Additionally, a maximum quantity limit for updating the cart has been implemented to ensure a consistent and manageable shopping experience.

--- a/server/src/views/carts/cart.handlebars
+++ b/server/src/views/carts/cart.handlebars
@@ -26,6 +26,7 @@
 									placeholder={{this.quantity}}
 									value={{this.quantity}}
 									min="0"
+									max={{sum this.quantity this.stock}}
 									aria-label="item quantity"
 									aria-describedby="addon-wrapping"
 									id="edit-cart-quantity-{{this.pid}}"
@@ -41,6 +42,8 @@
 								<button
 									type="button"
 									class="btn btn-danger cart-{{this.pid}} delete-product"
+									data-pid="{{this.pid}}"
+									data-cid="{{this.cid}}"
 								>Delete</button>
 
 								<button
