--- a/server/src/views/carts/cart.handlebars
+++ b/server/src/views/carts/cart.handlebars
@@ -7,10 +7,10 @@
 
 				<div class="col-md-4 col-sm-6 mb-3 mb-sm-3">
 					<div class="card">
-						<img src={{this.thumbnail}} class="card-img-top" alt="..." />
+						<img src={{this.thumbnail}} class="card-img-top" alt={{this.title}} />
 						<div class="card-body">
-							<h5 class="card-title">{{this.title}}</h5>
-							<p class="card-text">{{this.description}}</p>
+							<h5 class="card-title limited-title">{{this.title}}</h5>
+							<p class="card-text limited-paragraph">{{this.description}}</p>
 							<p
 								class="card-title price-tag {{this.price}} {{pid}}"
 								id="price-value-{{pid}}"
