Product Pagination, Search, API Endpoint, and Cart View Updates
Implemented pagination functionality for products, allowing for better navigation and organization. Added the ability to search products by name, enhancing the user's ability to find specific items. Created a new API endpoint to calculate the total amount to pay by the client, streamlining the purchasing process. Updated the cart view to display subtotals and the total amount to pay, providing users with a clear overview of their expenses. Additionally, populated the MongoDB database with a collection of at least 30 products, enriching the available product selection.

--- a/server/src/views/carts/mongo/cart.handlebars
+++ b/server/src/views/carts/mongo/cart.handlebars
@@ -1,6 +1,13 @@
 <section class="pt-5">
 	<div class="container mt-2 pt-2">
 
+		<div class="w-full mb-3 d-flex justify-content-center">
+
+			<div class="alert alert-primary h3" role="alert">
+				Total to pay: $ {{total}}
+			</div>
+		</div>
+
 		<div class="row">
 
 			{{#each products_data}}
@@ -19,9 +26,10 @@
 							<p class="card-title">Quantity:
 								<input
 									type="number"
-									class="form-control d-inline-block w-50 input-tag input-value-{{this.cid}}
+									class="form-control d-inline-block w-50 input-tag
 										{{this.cid}}
-										{{pid}}"
+										{{this.pid}}
+										out-light-blue"
 									maxlength="4"
 									placeholder={{this.quantity}}
 									value={{this.quantity}}
@@ -41,7 +49,7 @@
 
 								<button
 									type="button"
-									class="btn btn-danger cart-{{this.pid}} delete-product"
+									class="btn btn-danger delete-product {{this.pid}} {{this.cid}}"
 									data-pid="{{this.pid}}"
 									data-cid="{{this.cid}}"
 								>Delete</button>
