--- a/server/src/views/products/mongo/add-product-to-cart.handlebars
+++ b/server/src/views/products/mongo/add-product-to-cart.handlebars
@@ -18,7 +18,7 @@
 					<p class="card-title">Quantity:
 						<input
 							type="number"
-							class="form-control d-inline-block w-25 input-tag input-value-{{product.cid}}
+							class="form-control out-light-blue d-inline-block w-25 input-tag input-value-{{product.cid}}
 								{{product.cid}}
 								{{product._id}}"
 							maxlength="4"
