--- a/server/src/views/products/products-cards.handlebars
+++ b/server/src/views/products/products-cards.handlebars
@@ -11,6 +11,7 @@
 					<div class="card-body">
 						<h5 class="card-title limited-title">{{this.title}}</h5>
 						<p class="card-text limited-paragraph">{{this.description}}</p>
+						<p class="card-title price-tag" >Price: {{this.price}}</p>
 						<a href="/products/{{this.id}}" class="btn btn-primary">See more details</a>
 					</div>
 				</div>
