--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -92,6 +92,10 @@
    -webkit-box-orient: vertical;
    max-height: 3.6em;
   }
+
+  .out-light-blue {
+    outline: 2px solid rgb(166, 242, 242);
+  }
  </style>
  </style>
 </head>
@@ -114,7 +118,7 @@
       <a class="nav-link" href="/products_mongo/cards">Mongo Products</a>
       <a class="nav-link" href="/chat/">Chat!</a>
       <a class="nav-link position-relative" href="/carts_mongo"> Mongo Cart<span
-        class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-primary"></span></a>
+        class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
       <a class="nav-link position-relative" href="/carts/cart/1">Cart<span
         class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-primary">{{products_quantity}}</span></a>
      </div>
