--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -94,7 +94,95 @@
   }
 
   .out-light-blue {
-    outline: 2px solid rgb(166, 242, 242);
+   outline: 2px solid rgb(166, 242, 242);
+  }
+
+  .form-control {
+   box-shadow: none;
+   font-weight: normal;
+   font-size: 15px;
+  }
+
+  .form-control:focus {
+   border-color: #33cabb;
+   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .navbar .form-inline {
+   display: inline-block;
+  }
+
+  .navbar .nav li {
+   position: relative;
+  }
+
+  .navbar .nav li a {
+   color: #888;
+  }
+
+  .navbar .nav .btn-primary,
+  .navbar .nav .btn-primary:active {
+   color: #fff;
+   background: #33cabb;
+   outline: none;
+   border: transparent;
+   border-radius: 6px;
+  }
+
+  .navbar .nav .btn-primary:hover,
+  .navbar .nav .btn-primary:focus {
+   color: #fff;
+   outline: none;
+   background: #31bfb1;
+  }
+
+  .login-btn {
+   background-color: rgb(79, 79, 79) !important;
+   margin-left: 15px;
+   margin-right: 5px;
+   border: transparent;
+   border-radius: 6px;
+  }
+
+  .navbar ul.nav li.active a,
+  .navbar ul.nav li.open>a {
+   background: transparent !important;
+  }
+
+  .navbar ul.nav li.open>a.get-started-btn {
+   color: #fff;
+   background: #31bfb1 !important;
+  }
+
+  .navbar .dropdown-menu {
+   border-color: #e5e5e5;
+   box-shadow: 0 2px 8px rgba(0, 0, 0, .05);
+  }
+
+  .navbar .nav .dropdown-menu li a,
+  .navbar .nav .dropdown-menu li a:hover,
+  .navbar .nav .dropdown-menu li a:focus {
+   line-height: normal;
+  }
+
+  .dropdown-menu.form-wrapper {
+   width: 280px;
+   padding: 15px;
+   right: 0;
+  }
+
+  .navbar .navbar-right .dropdown-toggle::after {
+   display: none;
+  }
+
+  .hide {
+   display: none;
+  }
+
+  .nav-link.btn:hover {
+   background-color: rgb(83, 82, 82) !important;
+   transition: ease-out;
+   transition: 500ms;
   }
  </style>
  </style>
@@ -103,33 +191,117 @@
 <body class="text-bg-dark">
  <nav class="navbar fixed-top navbar-expand-md bg-dark navbar-dark px-5">
   <div class="container-fluid">
-   <a class="navbar-brand col" href="#">E Commerce BackEnd</a>
+   <a class="navbar-brand col" href="#">Grass and Plants</a>
    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
    </button>
    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+
+
     <div class="col-auto">
      <div class="navbar-nav flex-column flex-md-row justify-content-around">
-      <a class="nav-link active" aria-current="page" href="/">Home</a>
-      <a class="nav-link" href="/products/add-product">Add New Product</a>
-      <a class="nav-link" href="/products_mongo/add-product">Add Mongo Product</a>
-      <a class="nav-link" href="/products/cards">Products</a>
-      <a class="nav-link" href="/products_mongo/cards">Mongo Products</a>
-      <a class="nav-link" href="/chat/">Chat!</a>
-      <a class="nav-link position-relative" href="/carts_mongo"> Mongo Cart<span
-        class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
-      <a class="nav-link position-relative" href="/carts/cart/1">Cart<span
-        class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-primary">{{products_quantity}}</span></a>
+      <a class="nav-link btn text-bg-dark" href="/">Home</a>
+      <li class="nav-item dropdown text-bg-dark">
+       <a class="nav-link btn text-bg-dark dropdown-toggle" href="#" id="navbarDropdown" role="button"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Fs Links
+       </a>
+       <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="/products/add-product" id="add_fs_product">Add New Product</a>
+        <a class="dropdown-item" href="/products/cards">Products</a>
+        <a class="dropdown-item" href="/carts/cart/1">Cart<span
+          class="position-absolute top-1 start-100 translate-middle badge cart-badge rounded-pill bg-primary">{{products_quantity}}</span></a>
+       </div>
+      </li>
+
+
+
+      <a class="nav-link btn text-bg-dark center-btn" href="/products_mongo/add-product" id="add_mongo_product">Add
+       Mongo Product</a>
+
+
+      <a class="nav-link btn text-bg-dark" href="/products_mongo/cards">Mongo Products</a>
+      <a class="nav-link btn text-bg-dark" href="/chat/">Chat!</a>
+      {{!-- <button class="btn text-bg-dark" id="checkLog">Cookie</button> --}}
+      <a class="nav-link btn text-bg-dark position-relative" href="/carts_mongo"> Mongo Cart<span
+        class="position-absolute top-1 start-100 mt-1 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
+
+      <button class="btn text-bg-dark login-btn" id="logout">Logout</button>
+
+      <ul class="nav navbar-nav navbar-right">
+       <li id="login_menu">
+        <a data-toggle="dropdown" class="dropdown-toggle text-bg-dark nav-link btn text-bg-dark  login-btn"
+         href="#">Login</a>
+        <ul class="dropdown-menu form-wrapper text-bg-dark">
+         <li>
+          <form action="/examples/actions/confirmation.php" method="post" class="">
+           <p class="hint-text">Welcome again!</p>
+           <div class="form-group mb-3">
+            <input type="text" class="form-control" placeholder="Email" required="required" id="login_email"
+             value="">
+           </div>
+           <div class="form-group mb-3">
+            <input type="password" class="form-control" placeholder="Password" required="required" id="login_password"
+             value="">
+           </div>
+
+           <input type="submit" class="btn flex-1 btn-primary w-100 btn-block" value="Login" id="login">
+          </form>
+         </li>
+        </ul>
+       </li>
+       <li id="signup_menu">
+        <a href="#" data-toggle="dropdown" class="nav-link btn  btn-primary dropdown-toggle get-started-btn ">Sign
+         up</a>
+        <ul class="dropdown-menu form-wrapper text-bg-dark">
+         <li>
+          <form action="/examples/actions/confirmation.php" method="post">
+           <p class="hint-text">Fill in this form to create your account!</p>
+           <div class="form-group mb-3">
+            <input type="text" class="form-control" placeholder="Name" required="required" id="signup_name"
+             value="">
+           </div>
+           <div class="form-group mb-3">
+            <input type="text" class="form-control" placeholder="Email" required="required" id="signup_email"
+             value="">
+           </div>
+           <div class="form-group mb-3">
+            <input type="password" class="form-control" placeholder="Password" required="required" id="signup_password"
+             value="">
+           </div>
+           <div class="form-group mb-3">
+            <input type="password" class="form-control" placeholder="Confirm Password" required="required"
+             value="">
+           </div>
+
+           <input type="submit" class="btn w-100 btn-primary btn-block" value="Sign up" id="signup">
+          </form>
+         </li>
+        </ul>
+       </li>
+      </ul>
+
+
+
      </div>
     </div>
    </div>
   </div>
+
+
+
  </nav>
  {{{body}}}
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  <script src="/socket.io/socket.io.js"></script>
+ <script src="/public/scripts/auth.js"></script>
 
  {{#if script}}
  <script src="/public/scripts/{{script}}"></script>
