--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -144,6 +144,15 @@
    border-radius: 6px;
   }
 
+  .submit-btn {
+   color: #333333 !important
+  }
+
+  #logout {
+   background-color: rgb(79, 79, 79) !important;
+   margin: 0 0 0 15px;
+  }
+
   .navbar ul.nav li.active a,
   .navbar ul.nav li.open>a {
    background: transparent !important;
@@ -183,6 +192,36 @@
    background-color: rgb(83, 82, 82) !important;
    transition: ease-out;
    transition: 500ms;
+  }
+
+  .or-seperator {
+   margin-top: 32px;
+   text-align: center;
+   border-top: 1px solid #e0e0e0;
+  }
+
+  .or-seperator b {
+   color: #666;
+   padding: 0 8px;
+   width: 30px;
+   height: 30px;
+   font-size: 13px;
+   text-align: center;
+   line-height: 26px;
+   background: #fff;
+   display: inline-block;
+   border: 1px solid #e0e0e0;
+   border-radius: 50%;
+   position: relative;
+   top: -15px;
+   z-index: 1;
+  }
+
+  .centered-btn {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 1rem
   }
  </style>
  </style>
@@ -229,8 +268,9 @@
         class="position-absolute top-1 start-100 mt-1 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
 
       <button class="btn text-bg-dark" id="logout">Logout</button>
+      <button class="btn text-bg-dark" id="session-logout">Session Logout</button>
+     
 
-      <button class="btn text-bg-dark login-btn" id="git-login">Git</button>
 
       <ul class="nav navbar-nav navbar-right">
        <li id="login_menu">
@@ -241,22 +281,25 @@
           <form action="/examples/actions/confirmation.php" method="post" class="">
            <p class="hint-text">Welcome again!</p>
            <div class="form-group mb-3">
-            <input type="text" class="form-control" placeholder="Email" required="required" id="login_email" 
-            
-            value="admin@admin.com"
-            
-            >
+            <input type="email" class="form-control" placeholder="Email" required="required" id="login_email"
+             value="admin@admin.com">
            </div>
            <div class="form-group mb-3">
             <input type="password" class="form-control" placeholder="Password" required="required" id="login_password"
-
-
-             value="12345678"
-             
-             >
+             value="12345678">
            </div>
 
-           <input type="submit" class="btn flex-1 btn-primary w-100 btn-block" value="Login" id="login">
+           <input type="submit" class="btn flex-1 btn-primary w-100 btn-block submit-btn" value="Login" id="login">
+
+           <div class="or-seperator"><b>or</b></div>
+
+           <button class="btn centered-btn w-100 btn-primary btn-block submit-btn" id="git-login">Continue with
+            Github<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+             class="bi bi-github" viewBox="0 0 16 16">
+             <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+            </svg></button>
+
           </form>
          </li>
         </ul>
@@ -266,31 +309,44 @@
          up</a>
         <ul class="dropdown-menu form-wrapper text-bg-dark">
          <li>
-          <form action="/examples/actions/confirmation.php" method="post">
+          <form>
            <p class="hint-text">Fill in this form to create your account!</p>
            <div class="form-group mb-3">
-            <input type="text" class="form-control" placeholder="Name" required="required" id="signup_name" value="">
+            <input type="text" class="form-control" placeholder="Name" id="signup_name" value="" required="required">
            </div>
            <div class="form-group mb-3">
-            <input type="text" class="form-control" placeholder="Email" required="required" id="signup_email" value="">
+            <input type="email" class="form-control" placeholder="Email" id="signup_email" value="" required="required">
            </div>
            <div class="form-group mb-3">
-            <input type="password" class="form-control" placeholder="Password" required="required" id="signup_password"
-             value="">
+            <input type="password" class="form-control"  required="required" placeholder="Password" id="signup_password" value="">
            </div>
            <div class="form-group mb-3">
-            <input type="password" class="form-control" placeholder="Confirm Password" required="required" value="">
+            <input type="password" class="form-control" placeholder="Confirm Password" id="confirm_password" value="" required="required">
            </div>
 
-           <input type="submit" class="btn w-100 btn-primary btn-block" value="Sign up" id="signup">
+           <input type="submit" class="btn w-100 btn-primary btn-block submit-btn" value="Sign up" id="signup">
+
+           <div class="or-seperator"><b>or</b></div>
+
+
+
+
+
           </form>
+
+
+           <button class="btn centered-btn w-100 btn-primary btn-block submit-btn" id="git-submit">Continue with
+            Github<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+             class="bi bi-github" viewBox="0 0 16 16">
+             <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+            </svg></button>
+
+
          </li>
         </ul>
        </li>
       </ul>
-
-
-
      </div>
     </div>
    </div>
