Implement GitHub User Creation and Login, Route Protection, and JWT Token Authorization
Added functionality to create and login users using GitHub authentication. Implemented route protection to restrict access to certain routes until the user is logged in. Utilized JWT tokens to ensure proper user authorization and authentication throughout the application.

--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -223,6 +223,10 @@
    justify-content: center;
    gap: 1rem
   }
+
+  .show {
+   display: block !important;
+  }
  </style>
  </style>
 </head>
@@ -250,7 +254,7 @@
        <div class="dropdown-menu " aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="/products/add-product" id="add_fs_product">Add New Product</a>
         <a class="dropdown-item" href="/products/cards">Products</a>
-        <a class="dropdown-item" href="/carts/cart/1">Cart<span
+        <a class="dropdown-item" href="/carts/cart/1" id="fs_cart">Cart<span
           class="position-absolute top-1 start-100 translate-middle badge cart-badge rounded-pill bg-primary">{{products_quantity}}</span></a>
        </div>
       </li>
@@ -263,14 +267,12 @@
 
       <a class="nav-link btn text-bg-dark" href="/products_mongo/cards">Mongo Products</a>
       <a class="nav-link btn text-bg-dark" href="/chat/">Chat!</a>
-      {{!-- <button class="btn text-bg-dark" id="checkLog">Cookie</button> --}}
-      <a class="nav-link btn text-bg-dark position-relative" href="/carts_mongo"> Mongo Cart<span
+      <a class="nav-link btn text-bg-dark position-relative" href="/carts_mongo" id="mongo_cart"> Mongo Cart<span
         class="position-absolute top-1 start-100 mt-1 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
 
       <button class="btn text-bg-dark" id="logout">Logout</button>
-      <button class="btn text-bg-dark" id="session-logout">Session Logout</button>
-     
 
+      {{!-- <button class="btn text-bg-dark show" id="logout-force">Logout</button> --}}
 
       <ul class="nav navbar-nav navbar-right">
        <li id="login_menu">
@@ -282,11 +284,11 @@
            <p class="hint-text">Welcome again!</p>
            <div class="form-group mb-3">
             <input type="email" class="form-control" placeholder="Email" required="required" id="login_email"
-             value="admin@admin.com">
+             value="">
            </div>
            <div class="form-group mb-3">
             <input type="password" class="form-control" placeholder="Password" required="required" id="login_password"
-             value="12345678">
+             value="">
            </div>
 
            <input type="submit" class="btn flex-1 btn-primary w-100 btn-block submit-btn" value="Login" id="login">
@@ -318,30 +320,26 @@
             <input type="email" class="form-control" placeholder="Email" id="signup_email" value="" required="required">
            </div>
            <div class="form-group mb-3">
-            <input type="password" class="form-control"  required="required" placeholder="Password" id="signup_password" value="">
+            <input type="password" class="form-control" required="required" placeholder="Password" id="signup_password"
+             value="">
            </div>
            <div class="form-group mb-3">
-            <input type="password" class="form-control" placeholder="Confirm Password" id="confirm_password" value="" required="required">
+            <input type="password" class="form-control" placeholder="Confirm Password" id="confirm_password" value=""
+             required="required">
            </div>
 
            <input type="submit" class="btn w-100 btn-primary btn-block submit-btn" value="Sign up" id="signup">
 
            <div class="or-seperator"><b>or</b></div>
 
-
-
-
-
           </form>
 
-
-           <button class="btn centered-btn w-100 btn-primary btn-block submit-btn" id="git-submit">Continue with
-            Github<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-             class="bi bi-github" viewBox="0 0 16 16">
-             <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-            </svg></button>
-
+          <button class="btn centered-btn w-100 btn-primary btn-block submit-btn" id="git-submit">Continue with
+           Github<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github"
+            viewBox="0 0 16 16">
+            <path
+             d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+           </svg></button>
 
          </li>
         </ul>
