--- a/server/src/views/products/mongo/add-product-to-cart.handlebars
+++ b/server/src/views/products/mongo/add-product-to-cart.handlebars
@@ -41,7 +41,7 @@
 
 						<button
 							type="button"
-							class="btn btn-info edit-quantity"
+							class="btn btn-info edit-quantity product-detail-unique"
 							id="add-to-cart-{{product._id}}"
 						>Add to cart</button>
 
