Server Structure Improvement and Ticket Purchase Mailing Setup
Enhanced the server structure with various improvements to prepare for implementing the feature of sending tickets for purchases via email.

--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -247,7 +247,7 @@
      <div class="navbar-nav flex-column flex-md-row justify-content-around">
       <a class="nav-link btn text-bg-dark" href="/">Home</a>
       <li class="nav-item dropdown text-bg-dark">
-       <a class="nav-link btn text-bg-dark dropdown-toggle" href="#" id="navbarDropdown" role="button"
+       <a class="nav-link btn text-bg-dark dropdown-toggle d-none" href="#" id="navbarDropdown" role="button"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Fs Links
        </a>
@@ -262,10 +262,10 @@
 
 
       <a class="nav-link btn text-bg-dark center-btn" href="/products_mongo/add-product" id="add_mongo_product">Add
-       Mongo Product</a>
+       Products</a>
 
 
-      <a class="nav-link btn text-bg-dark" href="/products_mongo/cards">Mongo Products</a>
+      <a class="nav-link btn text-bg-dark" href="/products_mongo/cards">Products</a>
       <a class="nav-link btn text-bg-dark" href="/chat/">Chat!</a>
       <a class="nav-link btn text-bg-dark position-relative" href="/carts_mongo" id="mongo_cart"> Mongo Cart<span
         class="position-absolute top-1 start-100 mt-1 translate-middle badge rounded-pill bg-primary">{{mongo_products_quantity}}</span></a>
