User Upgrade to PREMIUM Status
Enhanced the server functionality by introducing the capability for users to upgrade from 'USER' to 'PREMIUM' status. This upgrade is contingent on meeting specific requirements, including the acceptance of three necessary files.

--- a/server/src/views/layouts/main.handlebars
+++ b/server/src/views/layouts/main.handlebars
@@ -257,6 +257,9 @@
     <div class="col-auto">
      <div class="navbar-nav flex-column flex-md-row justify-content-around">
       <a class="nav-link btn text-bg-dark" href="/">Home</a>
+      
+      <a class="nav-link btn text-bg-dark" href="/user_premium">Premium!</a>
+
       <li class="nav-item dropdown text-bg-dark">
        <a class="nav-link btn text-bg-dark dropdown-toggle d-none" href="#" id="navbarDropdown" role="button"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
