Frontend Ticket Details Enhancement
Currently engaged in enhancing the frontend to improve the presentation and functionality of ticket details.

--- a/server/src/views/carts/mongo/cart.handlebars
+++ b/server/src/views/carts/mongo/cart.handlebars
@@ -3,9 +3,9 @@
 
 		<div class="w-full mb-3 d-flex justify-content-center">
 
-			<div class="alert alert-primary h4" role="alert">
-				Total to pay: $ {{total}}
-			</div>
+			<button class="btn btn-success btn-lg btn-block" id="btn-buy" data-cid={{cid}}>
+				Buy now: $ {{total}}
+			</button>
 		</div>
 
 		<div class="row">
