Frontend Ticket Finalization and Notification Integration
Completed the frontend work on ticket final details, including the integration of notifications.

--- a/server/src/views/carts/mongo/cart.handlebars
+++ b/server/src/views/carts/mongo/cart.handlebars
@@ -3,7 +3,7 @@
 
 		<div class="w-full mb-3 d-flex justify-content-center">
 
-			<button class="btn btn-success btn-lg btn-block" id="btn-buy" data-cid={{cid}}>
+			<button class="btn btn-success btn-lg btn-block" id="btn-buy" data-cid={{cid}} data-amount={{total}}>
 				Buy now: $ {{total}}
 			</button>
 		</div>
