File Uploading and 'npm start' Script Debugging
Currently in the process of enabling file uploading functionality, while also addressing issues with the 'npm start' script to ensure a smooth development environment.

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -258,7 +258,7 @@
      <div class="navbar-nav flex-column flex-md-row justify-content-around">
       <a class="nav-link btn text-bg-dark" href="/">Home</a>
       
-      <a class="nav-link btn text-bg-dark" href="/user_premium">Premium!</a>
+      <a class="nav-link btn text-bg-dark hide" href="/user_premium" id="premium">Premium!</a>
 
       <li class="nav-item dropdown text-bg-dark">
        <a class="nav-link btn text-bg-dark dropdown-toggle d-none" href="#" id="navbarDropdown" role="button"
